--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,6 +13,10 @@
     <string name="time_to_is">End time is: </string>
     <string name="distance_is">Distance:  </string>
     <string name="added_activity">Activity was added!</string>
+    <string name="delete">Delete activity.</string>
+    <string name="sure_to_delete">Are you sure, that you want to delete this activity?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
     <string-array name="sports">
         <item>Basketball</item>
